kubernetes/ingress/ingress-demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo

spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: ingress-container
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name:  ingress-demo
spec:
  selector:
    app:  myapp
  ports:
  - name:  ing-port
    port:  80
    targetPort:  8080
  type:  ClusterIP
